Fixed spacing between fields

--- a/styling.css
+++ b/styling.css
@@ -6,14 +6,6 @@
     background-color: white;
 }
 
-.contentDiv {
-    margin-bottom: 1em;
-}
-
-.contentDiv:empty {
-    margin-bottom: 0;
-}
-
 .title {
     font-size:80%;
     color: #999999;
@@ -28,6 +20,7 @@
     font-family: Batang;
     color:rgb(173,122,190);
     font-size:26px;
+    grid-column: 3;
 }
 
 #backContent {
@@ -57,4 +50,10 @@
 #gridContainer {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
+    padding-bottom: 1em;
+}
+
+#gridContainer > div{
+    padding-bottom: .4em;
+    padding-top: .4m;
 }
